--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,8 @@
 		    <span class='button'><a href='#'>забронировать</a></span>
 		</div>
 		<div class='rate'>
-		<!-- add code for rate -->
+		  <span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span>
+          <p>Рейтинг:8,5</p>
 		</div>
 	  </section>
 		
@@ -48,7 +49,8 @@
 		    <span class='button'><a href='#'>забронировать</a></span>
 		</div>
 		<div class='rate'>
-		<!-- add code for rate -->
+		    <span>&#9734;</span><span>&#9734;</span><span>&#9734;</span>
+            <p>Рейтинг:8,9</p>
 		</div>
 	  </section>
 	  
@@ -62,7 +64,8 @@
 		    <span class='button'><a href='#'>забронировать</a></span>
 		</div>
 		<div class='rate'>
-		<!-- add code for rate -->
+			<span>&#9734;</span><span>&#9734;</span>
+            <p>Рейтинг:9,2</p>
 		</div>
 	  </section>
 	</main>
