--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   	<footer class='contacts'>
       <div>
         <p class='teg'>
-          #visitsedona 
+          <a>#visitsedona</a> 
         </p>
       </div>
       <div class='footer-social'>
@@ -151,4 +151,7 @@
 	  </div>
   </footer>
   <!-- Form for registration--> 
+  
+    </body>
+</html>
   
