--- a/catalog.html
+++ b/catalog.html
@@ -21,6 +21,7 @@
 	  <div class='logo-image'>
     </header>
 	<main class='catalog'>	
+	<h1 class='visually-hidden'>Гостинницы в Sedona</h1>
 	  <section class='catalog-filter'>
         <h2 class='visually-hidden'>
 		  Параметры поиска жилья в Седоне
@@ -323,7 +324,7 @@
 	  <div class='contacts'>
         <div class='footer-block-tag'>
           <p class='footer-tag'>
-            <a>#visitsedona</a> 
+            <a href='#'>#visitsedona</a> 
           </p>
         </div> 
         <div class='footer-block-social'>
