--- a/index.html
+++ b/index.html
@@ -8,22 +8,45 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     </head>
-      <body>
-        <header class='main-header'>
+    <body>
+    <header class='main-header'>
           <nav class='main-navigation'>
             <ul class='site-navigation'>
-              <li class='nav-item1'><a href='#'>Информация</a></li>
-              <li class='nav-item2'><a href='#'>Фото и видео</a></li>
-              <li class='main-header-logo'><a class='main-header-logo' href='index.html'><img src='svg/logo-sedona.svg'  alt='Logo for project Sedona'></a></li>
-		      <li class='nav-item4'><a href='#'>Карта штата</a></li>
-              <li class='nav-item5'><a href='#'>Гостинницы<a></li>
+              <li class='nav-item1'>
+			    <a href='#'>
+				  Информация
+				</a>
+			  </li>
+              <li class='nav-item2'>
+			    <a href='#'>
+				  Фото и видео
+				</a>
+			  </li>
+              <li class='main-header-logo'>
+			    <a class='main-header-logo' href='index.html'>
+				  <img src='svg/logo-sedona.svg'  alt='Logo for project Sedona'>
+				</a>
+			  </li>
+		      <li class='nav-item4'>
+			    <a href='#'>
+				  Карта штата
+				</a>
+			  </li>
+              <li class='nav-item5'>
+			    <a href='./catalog.html'>
+			      Гостинницы
+				</a>
+			  </li>
             </ul>
-          </nav>
+          </div>
 	      <div class='logo-image'>
 	        <img src='img/sedona-logo.jpg' width='1200' height='508' alt='Logo picture Sedona'>
-	      </div>
+	      </nav>
     </header>
     <main class='container'>
+	  <h1 class='visually-hidden'>
+	    HTML Sedona
+	  </h1>
       <div>
         <p class='container-title'>
 		  Седона — небольшой городок в Аризоне, <br> заслуживающий большего!
