--- a/catalog.html
+++ b/catalog.html
@@ -15,13 +15,15 @@
           <li class='nav-item2'><a href='#'>Фото и видео</a></li>
           <li class='main-header-logo'><a class='main-header-logo' href='https://htmlacademy-htmlcss.github.io/1007647-sedona-25/8/'><img src='svg/logo-sedona.svg'  alt='Logo for project Sedona'></a></li>
 		  <li class='nav-item4'><a href='#'>Карта штата</a></li>
-          <li class='nav-item5 navigation-current'><a href='#'>Гостинницы</a></li>
+          <li class='nav-item5 navigation-current'>Гостинницы</li>
         </ul>
       </nav>
 	  <div class='logo-image'>
     </header>
 	<main class='catalog'>	
-	<h1 class='visually-hidden'>Гостинницы в Sedona</h1>
+	  <h1 class='visually-hidden'>
+	    Гостинницы в Sedona
+	  </h1>
 	  <section class='catalog-filter'>
         <h2 class='visually-hidden'>
 		  Параметры поиска жилья в Седоне
@@ -34,19 +36,19 @@
             <ul class='filter-ul'>
               <li class='filter-li'>
                 <input type='checkbox' id='pool' class='visually-hidden' checked>
-                <label for='filter-item' tabindex='1'>
+                <label for='pool' tabindex='1'>
 				  Бассейн
 				</label>
               </li>
               <li class='filter-li'>
                 <input type='checkbox' id='parking' class='visually-hidden'>
-                <label for='filter-item' tabindex='2'>
+                <label for='parking' tabindex='2'>
 				  Парковка
 				</label>
               </li>
               <li class='filter-li'>
                 <input type='checkbox' id='Wi-fi' class='visually-hidden'>
-                <label for='filter-item' tabindex='3'>
+                <label for='Wi-fi' tabindex='3'>
 				  wi-fi
 				</label>
               </li>
@@ -59,19 +61,19 @@
             <ul class='filter-ul'>
               <li class='filter-li'>
                 <input type='checkbox' id='hotel' class='visually-hidden' checked>
-                <label for='filter-item' tabindex='4'>
+                <label for='hotel' tabindex='4'>
 				  Гостиница
 				</label>
               </li>
               <li class='filter-li'>
                 <input type='checkbox' id='motel' class='visually-hidden' checked>
-                <label for='filter-item' tabindex='5'>
+                <label for='motel' tabindex='5'>
 				  Мотель
 				</label>
               </li>
               <li class='filter-li'>
                 <input type='checkbox' id='apartments' class='visually-hidden' checked>
-                <label for='filter-item' tabindex='6'>
+                <label for='apartments' tabindex='6'>
 				  Апартаменты
 				</label>
               </li>
@@ -84,7 +86,7 @@
             <div class='price-min-max'>
               <label class='price-min'>
                 <input 
-				  class='price-input'
+				  class='price-input-1'
 				  type='price-text'
 				  name='min-price'
 				  value=' от 0'
@@ -93,7 +95,7 @@
               </label>
               <label class='price-max'>
                 <input 
-				  class='price-input'
+				  class='price-input-2'
 				  type='price-text'
 				  name='max-price'
 				  value='до 3000'
@@ -146,11 +148,11 @@
           </ul>
 	    </div>
 	    <div class='arrows'>
-          <ul class='serach-arrows' style='display: flex;'>
+          <ul class='search-arrows' style='display: flex;'>
             <li class='arrow-up'>
               <a href='#'> 
                 <svg  xmlns='http://www.w3.org/2000/svg' width='11' height='10' viewBox='0 0 11 10'>
-                  <path class='serach-arrows-path' fill='#cacaca' d='M5.5 0L0 10h11z' />
+                  <path class='search-arrows-path' fill='#cacaca' d='M5.5 0L0 10h11z' />
                 </svg>
                 <span class='visually-hidden'>
 				  Сортировка по возрастанию
@@ -160,7 +162,7 @@
             <li class='arrow-down'>
               <a href='#'>
                 <svg xmlns='http://www.w3.org/2000/svg' width='11' height='10' viewBox='0 0 11 10'>
-                  <path class='serach-arrows-path' fill='#cacaca' d='M5.5 10L0 0h11' />
+                  <path class='search-arrows-path' fill='#cacaca' d='M5.5 10L0 0h11' />
                 </svg>
                 <span class='visually-hidden'>
 				  Сортировка по убыванию
@@ -176,29 +178,29 @@
 		</h1>
 	    <div class='catalog-list'>
 	      <div class='catalog-picture'>
-		    <img src='img/amara.jpg' width='135' height='90'  alt='house-picture'>
+		    <img class='img_amara' src='img/amara.jpg'  alt='house-picture'>
 		  </div>
 		  <div class='catalog-info'>
-		    <span class='house-title'>Amara resort & SPA</span>		    
+		    <span class='house-title'>
+			  <a href='#'>
+			    Amara resort & SPA
+			  </a>
+			</span>		    
 			<div class='catalog-type'>
 			  <span class='catalog-info-tite'>
 			    Гостинница
 			  </span>
-		      <div class='button-info'>
-			    <a href='#'>
-			      подробнее
-			    </a>
-			  </div>
+		      <button class='button-info'>
+			    подробнее
+			  </button>
 			</div>
             <div class='catalog-reservation'>
      		  <span class='catalog-info-tite'>
 			    от 4000 р.
 			  </span>
-	  	      <div class='button-reservation'>
-			    <a href='#'>
-			      забронировать
-			    </a>  
-		      </div>
+	  	      <button class='button-reservation'>
+			    забронировать 
+		      </button>
 			</div>
 		  </div>
 		  <div class='catalog-rate'>
@@ -224,31 +226,29 @@
 	  </section>
 	  <section class='catalog-list'>
 	    <div class='catalog-picture'>
-		  <img src='img/desert.jpg' width='135' height='90'  alt='house-picture'>
+		  <img class='img_desert' src='img/desert.jpg'  alt='house-picture'>
 		</div>
 		<div class='catalog-info'>
 		  <span class='house-title'>
-		    Desert qail inn
+		    <a href='#'>
+			  Desert qail inn
+		    </a>
 		  </span>
 		  <div class='catalog-type'>
 		    <span class='catalog-info-tite'>
 			  мотель
 			</span>
-		    <div class='button-info'>
-			  <a href='#'>
-			    подробнее
-			  </a>
-			</div>
+		    <button class='button-info'>
+			  подробнее
+			</button>
 		  </div>
           <div class='catalog-reservation'>
      		<span class='catalog-info-tite'>
 			  от 3000 р.
 			</span>
-	  	    <div class='button-reservation'>
-			  <a href='#'>
-			    забронировать
-			  </a>  
-		    </div>
+	  	    <button class='button-reservation'>
+			  забронировать 
+		    </button>
 	      </div>
 		</div>
 		<div class='catalog-rate'>
@@ -276,29 +276,27 @@
 	  </section>
       <section class='catalog-list'>
 	    <div class='catalog-picture'>
-		  <img src='img/villas.jpg' width='135' height='90'  alt='house-picture'>
+		  <img class='img_villas' src='img/villas.jpg'  alt='house-picture'>
 		</div>
 		<div class='catalog-info'>
 		  <span class='house-title'>
-		    Villas at poco diablo
+		    <a href='#'>
+		      Villas at poco diablo
+		    </a>
 		  </span>		    
 		  <div class='catalog-type'>
 		    <span class='catalog-info-tite'>
 			  апартаменты
 		    </span>
-		    <div class='button-info'>
-			  <a href='#'>
-			    подробнее
-			  </a>
-			</div>
+		    <button class='button-info'>
+			  подробнее
+			</button>
 		  </div>
           <div class='catalog-reservation'>
      		<span class='catalog-info-tite'>от 2000 р.</span>
-	  	    <div class='button-reservation'>
-			  <a href='#'>
-			    забронировать
-			  </a>  
-		    </div>
+	  	    <button class='button-reservation'>
+			  забронировать 
+		    </button>
 		  </div>
 		</div>
 		<div class='catalog-rate'>
