--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,6 @@
           <li class='nav-item5 navigation-current'>Гостинницы</li>
         </ul>
       </nav>
-	  <div class='logo-image'>
     </header>
 	<main class='catalog'>	
 	  <h1 class='visually-hidden'>
@@ -87,7 +86,7 @@
               <label class='price-min'>
                 <input 
 				  class='price-input-1'
-				  type='price-text'
+				  type='text'
 				  name='min-price'
 				  value=' от 0'
 				  tabindex='7'
@@ -96,7 +95,7 @@
               <label class='price-max'>
                 <input 
 				  class='price-input-2'
-				  type='price-text'
+				  type='text'
 				  name='max-price'
 				  value='до 3000'
 				  tabindex='8'
