--- a/index_form.html
+++ b/index_form.html
@@ -95,7 +95,7 @@
                     <p class='text-data'>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 </div>
             </div>
-            <button class='search-data-button js-open-modal' id='button-search-sedona'><a href='./index.html'>Поиск гостинницы в Седоне</a></button>
+            <div class='search-data-button js-open-modal' id='button-search-sedona'><a href='./index.html'>Поиск гостинницы в Седоне</a></div>
         </section>
     </main>
     <div class='modal-block js-modal-show'>
